품목에 상태나 분류에 따른 조회 성공