@@ -1,6 +1,5 @@
 package com.example.the_boxes_server.item;
 
-import com.example.the_boxes_server.core.exceotions.Exception403;
 import com.example.the_boxes_server.core.exceotions.Exception404;
 import com.example.the_boxes_server.user.User;
 import lombok.RequiredArgsConstructor;
@@ -8,6 +7,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -19,7 +19,21 @@ public class ItemService {
     public List<ItemResponse.ListDTO> list() {
         Sort sort = Sort.by(Sort.Direction.DESC, "itemId"); // 필드 이름 수정
         List<Item> itemList = itemRepository.findAll(sort);
-        return itemList.stream().map(ItemResponse.ListDTO::new).toList();
+        return itemList.stream().map(ItemResponse.ListDTO::new).collect(Collectors.toList());
+    }
+
+    @Transactional
+    public List<ItemResponse.ListDTO> listByClassification(String classification) {
+        List<Item> items = itemRepository.findByClassification(classification);
+        System.out.println("Items found by classification '" + classification + "': " + items); // 로그 추가
+        return items.stream().map(ItemResponse.ListDTO::new).collect(Collectors.toList());
+    }
+
+    @Transactional
+    public List<ItemResponse.ListDTO> listByStatus(Item.ItemStatus status) {
+        List<Item> items = itemRepository.findByStatus(status);
+        System.out.println("Items found by status '" + status + "': " + items); // 로그 추가
+        return items.stream().map(ItemResponse.ListDTO::new).collect(Collectors.toList());
     }
 
     @Transactional
@@ -59,16 +73,5 @@ public class ItemService {
         System.out.println("After update: " + item);
 
         return new ItemResponse.UpdateDTO(item);
-    }
-
-    @Transactional
-    public ItemResponse.RemoveDTO remove(int itemId, Integer sessionUserId) {
-        Item item = itemRepository.findById(itemId)
-                .orElseThrow(() -> new Exception404("해당 품목을 찾을 수 없습니다"));
-        if (sessionUserId != item.getUser().getUserId()) {
-            throw new Exception403("해당 품목을 삭제할 권한이 없습니다");
-        }
-        itemRepository.deleteById(itemId);
-        return new ItemResponse.RemoveDTO(item);
     }
 }
